# Archytex

./: .env.sample  .gitignore  LICENSE  README.md  build.bat  build.py  build_viewport.py  deploy.py  docker-compose.arm64.yml  docker-compose.yml  openapi.yml
.github/workflows/: archyrt-core.yml
assets/: .gitignore
assets/gizmos/: arc.blend  arrow.blend  plane.blend  vertex.blend
assets/props/: cube.blend
assets/textures/: ground.xcf  nodraw.xcf
backend/: .gitignore  go.mod  go.sum  main.go
backend/database/: api.go  mongo.go  rabbitmq.go  redis.go
backend/logging/: errors.go  logger.go  requestid.go
backend/mailing/: client.go
backend/projectloaders/: api.go  fileloader.go
backend/routes/: assets.go  hello.go  login.go  register.go  verify.go  ws.go
backend/session/: userMiddleware.go
backend/templates/: emails.tmpl
backend/utilities/: required.go
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.raytracer  Dockerfile.raytracer.oidn  nginx.conf  rs-init.sh
docs/: .gitignore  appendix.tex  main.tex  ref.bib
docs/chapters/: backend.tex  ch-Abstract.tex  ch-Dedication.tex  frontend.tex
docs/parts/: part-Introduction.tex
editor/: .gitignore  Cargo.toml  build.bat  build.sh  build2.bat  tools.txt
editor/assets/: arc.agzm  arrow.agzm  cube.amdl  plane.agzm
editor/express/: package.json
editor/tools/gpu/: Cargo.toml
editor/tools/gpu/src/: frame.rs  handle.rs  lib.rs
editor/tools/gpu/src/data/: buffer.rs  depth_buffer.rs  mod.rs  texture.rs  uniform.rs
editor/tools/gpu/src/pipelines/: gizmo.rs  gizmo.wgsl  grid.rs  grid.wgsl  line.rs  line.wgsl  mesh.rs  mesh.wgsl  mod.rs  prop.rs  prop.wgsl  solid.rs  solid.wgsl
editor/tools/renderer/: Cargo.toml
editor/tools/renderer/src/: data.rs  lib.rs  scene.rs
editor/tools/renderer/src/data/: gizmo.rs  grid.rs  line.rs  lines.rs  mesh.rs  mod.rs  prop.rs  solid.rs  transform.rs  uniform.rs
editor/tools/renderer/src/gpu/: frame.rs  mod.rs
editor/viewport/: Cargo.toml
editor/viewport/src/: input.rs  ipc.rs  lib.rs  main_loop.rs  math.rs  winit_loop.rs
editor/viewport/src/editor/: camera.rs  elements.rs  gizmo.agzm  graphics.rs  grid.rs  mod.rs  scene.rs
editor/viewport/src/editor/tools/: context.rs  face.rs  generic.rs  mod.rs  point.rs  prop.rs  solid.rs
frontend/: .gitignore  Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  EditorUtils.ts  declaration.d.ts  editorUtils.ts  env.ts  index.css
gltf2mesh/: Cargo.toml
gltf2mesh/src/: main.rs
kleng/: .gitignore  Cargo.toml
kleng/example/props/: defs.json  tree.blend
kleng/src/: amdl.rs  compile.rs  compiler.rs  db.rs  defs.rs  error.rs  fsutil.rs  indexed.rs  input.rs  main.rs  model.rs  props.rs  repo.rs  report.rs  require.rs  texture.rs  textures.rs
mdl/: Cargo.toml
mdl/src/: lib.rs
meshtool/: Cargo.toml
meshtool/src/: main.rs
raytracer/: .gitignore  workspace.code-workspace
raytracer/archyrt-core/: Cargo.toml
raytracer/archyrt-core/benches/: core_benchmark.rs
raytracer/archyrt-core/src/: lib.rs  tonemapping.rs
raytracer/archyrt-core/src/api/: camera.rs  fragment_collector.rs  fragment_render.rs  mod.rs
raytracer/archyrt-core/src/basic_renderer/: mod.rs
raytracer/archyrt-core/src/cameras/: jitter.rs  mod.rs  perspective.rs
raytracer/archyrt-core/src/collector/: array_collector.rs  image_collector.rs  mod.rs  raw_collector.rs  tests.rs
raytracer/archyrt-core/src/intersectables/: aabb.rs  apply_matrix.rs  bvh.rs  linear_bvh.rs  mod.rs  sphere.rs  surface.rs  tests.rs  transform.rs  triangle.rs  union.rs
raytracer/archyrt-core/src/loaders/: mod.rs
raytracer/archyrt-core/src/loaders/amdl/: amdl_textures.rs  mod.rs  repo.rs
raytracer/archyrt-core/src/loaders/ascn/: amdl_textures.rs  mod.rs
raytracer/archyrt-core/src/loaders/gltf/: mod.rs
raytracer/archyrt-core/src/renderers/: mod.rs  sampling.rs  tests.rs  tonemapping_renderer.rs
raytracer/archyrt-core/src/renderers/basic_renderer/: mod.rs
raytracer/archyrt-core/src/renderers/path_tracer/: mod.rs
raytracer/archyrt-core/src/renderers/solid_renderers/: albedo.rs  mod.rs  normal.rs
raytracer/archyrt-core/src/textures/: color_provider.rs  mod.rs  texture.rs
raytracer/archyrt-core/src/textures/samplers/: linear.rs  mod.rs  nearest.rs
raytracer/archyrt-core/src/textures/texture_repo/: exr.rs  mod.rs  png.rs
raytracer/archyrt-core/src/utilities/: math.rs  mod.rs  ray.rs  tests.rs
raytracer/archyrt-dev/: .gitignore  Cargo.toml  model.glb
raytracer/archyrt-dom/: Cargo.toml
raytracer/archyrt-dom/src/: main.rs
raytracer/archyrt-sub/: .gitignore  Cargo.toml
raytracer/archyrt-sub/assets/props/: ceramic_vase_2.amdl  chandelier.amdl  outdoor_set.amdl
raytracer/archyrt-sub/src/: main.rs  shifted_view.rs
raytracer/assets/: .gitignore  (+2 more)
tk3d/: Cargo.toml
toolkit/: Cargo.toml
viewport/: .gitignore  Cargo.toml  build.bat  build.sh  index.html  rbuild.sh  serve.sh
viewport/entry/: Cargo.toml
viewport/entry/pkg/: .gitignore  index.html
viewport/entry/src/: lib.rs
viewport/logic/: Cargo.toml
viewport/logic/src/: camera.rs  grid.rs  input.rs  lib.rs  mesh.rs  model.rs  transform.rs
viewport/logic/src/inner_logic/: camera.rs  grid.rs  mod.rs  model.rs  transform.rs
viewport/src/: input.rs  lib.rs  log.rs  main.rs  math.rs  msg.rs  net.rs  ring_vec.rs  sphere.amdl
viewport/src/editor/: brush.rs  camera.rs  config.rs  mod.rs  texture.rs  util.rs
viewport/src/editor/prop/: mod.rs
viewport/src/editor/solid/: container.rs  editor.rs  mod.rs
viewport/src/render/: base.rs  brush.wgsl  data.rs  gpu.rs  line.wgsl  mod.rs  prop.wgsl  solid.wgsl  sprite.wgsl
viewport/tools/: Cargo.toml
viewport/tools/src/: app.rs  gfx.rs  lib.rs  log.rs  math.rs
viewport/tools/src/app/: event.rs  input.rs  mod.rs  web_util.rs
viewport/tools/src/gfx/: color.rs  context.rs  gl.rs  mesh.rs  mod.rs  primitives.rs
viewport/tools/src/gfx/shaders/: line.frag  line.vert  mesh.frag  mesh.vert
viewport/tools/src/math/: mat4.rs  mod.rs  vec3.rs
viewport/web/: glue.js  index.html
(+334 files in other folders)
