[package]
name = "kleng"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0"
gltf = "1"
thiserror = "1"
asset = { path = "../editor/packages/asset" }

[profile.release]
panic = "abort"
codegen-units = 1