[package]
name = "viewport"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
wasm-bindgen = "0.2.78"
futures-lite = "1.12.0"
console_error_panic_hook = "0.1.7"
cgmath = "0.18.0"
image = "0.23.14"
wgpu = { version = "0.11.0", features = ["webgl"] }
winit = { version = "0.25.0", features = ["web-sys"] }
web-sys = { version = "0.3.55", features = ["Document", "Window", "Node"] }
bytemuck = { version = "1.7.2", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"

[profile.dev]
opt-level = "z"