[package]
name = "viewport"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
winit = "=0.26.1"
renderer = { path = "../tools/renderer" }
tk3d = { path = "../../tk3d", features = ["bytemuck"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.55", features = ["Document", "Window", "Node"] }
wasm-bindgen = "=0.2.78"