[package]
name = "archyrt_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
easy-gltf = "0.1.4"
anyhow = "1.0.44"

[dev-dependencies]
criterion = "0.3.5"

# Make sure to enable LTO in final release!!!
[profile.bench]
lto = true

[[bench]]
name = "core_benchmark"
harness = false