[package]
name = "archyrt_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
easy-gltf = "0.1.4"
anyhow = "1.0.44"
cgmath = "0.18.0"
asset = {path="../../editor/packages/asset"}
serde_json = "1.0.74"
serde = "1.0.133"
rand = "0.8.4"
rand_distr = "0.4.3"
exr = "1.4.1"

[dev-dependencies]
criterion = "0.3.5"

# Make sure to enable LTO in final release!!!
[profile.bench]
lto = true

[[bench]]
name = "core_benchmark"
harness = false