[package]
name = "archyrt_dom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "1.9.0"
async-global-executor = "2.0.2"
anyhow = "1.0.44"
dotenv = "0.15.0"
futures-util = "0.3.19"
futures = "0.3.19"
redis = "0.21.5"
uuid = {version="0.8.2", features=["v4"]}
image = "0.23.14"