[package]
name = "archyrt_dom"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
lapin = "1.9.0"
async-global-executor = "2.0.2"
anyhow = "1.0.44"
dotenv = "0.15.0"
futures-util = "0.3.19"
futures = "0.3.19"
redis = "0.21.5"
uuid = {version="0.8.2", features=["v4"]}
image = "0.23.14"
archyrt_core = {path="../archyrt-core"}
oidn = {version="1.4.1", optional=true}

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]