[package]
name = "archyrt_sub"
version = "1.0.0"
edition = "2021"
authors = ["Marton Zoltán"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
lapin = "1.9.0"
async-global-executor = "2.0.2"
anyhow = "1.0.44"
dotenv = "0.15.0"
redis = {version="0.21.5", features=['aio', 'async-std-comp']}
futures = "0.3.19"
lru = "0.7.2"
archyrt_core = {path="../archyrt-core"}
uuid = {version="0.8.2", features=["v4"]}
num_cpus = "1.13.1"