[package]
name = "tools"
version = "0.1.0"
edition = "2018"

[dependencies]
web-sys = { version = "0.3.55", features = ["Window", "Document", "HtmlCanvasElement", "WebGl2RenderingContext"] }
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.6"
winit = { version = "0.25.0", features = ["web-sys"] }
glow = "0.11.0"