[package]
name = "tools"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.6"
glow = "0.11.0"
image = "0.23.14"
cgmath = "0.18.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
winit = { version = "0.25.0", features = ["web-sys"] }
bytemuck = { version = "1.7.2", features = ["derive"] }
web-sys = { version = "0.3.55", features = ["Window", "Document", "HtmlCanvasElement", "WebGl2RenderingContext"] }