[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "=0.4.2"
thiserror = "=1.0.30"
cgmath = "=0.18.0"
image = "=0.23.14"
bytemuck = { version = "=1.7.3", features = ["derive"] }
gpu = { path = "../gpu" }
asset-id = { path = "../../../toolkit/asset-id" }